service/files/orchestator-srv.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: orchestator
  namespace: ${NAMESPACE}
spec:
  # ExternalName: ""
  clusterIP: None
  ports:
  - name: ""
    nodePort: 0
    port: 9999
    protocol: ""
    targetPort: 0
  selector:
    service: orchestator
status:
  loadBalancer: {}
