service/files/ps-srv.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: ps
  namespace: ${NAMESPACE}
spec:
  # ExternalName: ""
  clusterIP: None
  ports:
  - name: ""
    nodePort: 0
    port: 2222
    protocol: ""
    targetPort: 0
  selector:
    service: ps
status:
  loadBalancer: {}
