service/files/bokeh-plotter-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bokeh-plotter
  namespace: ${NAMESPACE}
spec:
  rules:
  - host: bokeh-plotter.${NAMESPACE}.${TRAEFIK_DOMAIN}
    http:
      paths:
      - backend:
          serviceName: bokeh-plotter
          servicePort: 5006
